--- a/Reports/login.html
+++ b/Reports/login.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-12-21 11:31:40</span>
+					<span class='suite-started-time'>2021-12-21 15:38:37</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 21s+574ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 28s+38ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 21s+574ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 28s+38ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-12-21 11:31:18</span> 
+							<span class='panel-lead suite-started-time'>2021-12-21 15:38:09</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-12-21 11:31:40</span> 
+							<span class='panel-lead suite-ended-time'>2021-12-21 15:38:37</span> 
 						</div> 
 					</div>
 				</div>
@@ -245,17 +245,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active fail ' extentid='aae1b9b4-2c0a-4a52-a2d6-d1a3adcf7b4e'>
+										<li class='collection-item test displayed active pass ' extentid='693d0be5-95ad-44bb-b477-4316a2bdb001'>
 											<div class='test-head'>
 												<span class='test-name'>Hybrid Automation on CRM Lambda Webpage </span>
-												<span class='test-status label right outline capitalize fail'>fail</span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-21 11:31:30</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-21 11:31:39</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 9s+727ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-21 15:38:24</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-21 15:38:36</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 12s+408ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -272,43 +272,33 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>11:31:30</td>
+																	<td class='timestamp'>15:38:24</td>
 																	<td class='step-details'>Started the Login Test</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>11:31:30</td>
+																	<td class='timestamp'>15:38:24</td>
 																	<td class='step-details'>Enter User name and Password</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>11:31:31</td>
+																	<td class='timestamp'>15:38:24</td>
 																	<td class='step-details'>Click on Login button</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>11:31:38</td>
+																	<td class='timestamp'>15:38:36</td>
 																	<td class='step-details'>Login Successful</td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>11:31:38</td>
+																	<td class='timestamp'>15:38:36</td>
 																	<td class='step-details'>In Dashboard Page</td>
 																</tr>
 																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>11:31:39</td>
-																	<td class='step-details'>Expected Text: Dashboard is not equal to Actual Text: Dashboard1</td>
-																</tr>
-																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>11:31:39</td>
-																	<td class='step-details'>Test Case Failed is handleStartUp</td>
-																</tr>
-																<tr>
-																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
-																	<td class='timestamp'>11:31:39</td>
-																	<td class='step-details'><a href='/Users/maneeshchandra/Desktop/Hybrid/FailedTestsScreenshots/handleStartUp12_21_2021_11_31_39.png' data-featherlight='image'><img class='report-img' src='file:////Users/maneeshchandra/Desktop/Hybrid/FailedTestsScreenshots/handleStartUp12_21_2021_11_31_39.png' /></a></td>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>15:38:36</td>
+																	<td class='step-details'>Expected Text: Dashboard is equal to Actual Text: Dashboard</td>
 																</tr>
 														</tbody>
 													</table>
